Fix issue #138 Align pastil / valid

--- a/sources/appsgate-client/app/styles/index.css
+++ b/sources/appsgate-client/app/styles/index.css
@@ -863,6 +863,10 @@ font-size: smaller;
   margin-left:15px;
 }
 
+.fix-row-right {
+  margin-right: -30px;
+}
+
 /* --------------------- Debugger styles ----------------------------------*/
 
 .debugger {
